# notebooks

./: Makefile  jupyter_notebook_config.py  pyproject.toml
notebooks/: test.ipynb
