[tool.poetry]
name = "diffusion-bot"
version = "0.1.0"
description = ""
authors = ["Max Gonzih <gonzih@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
huggingface = "^0.0.1"
transformers = "^4.22.2"
ftfy = "^6.1.1"
attrdict = "^2.0.1"
python-telegram-bot = {version = "^20.0a4",  allow-prereleases = true}
uuid = "^1.30"
coloredlogs = "^15.0.1"

# all the crap for BSRGAN
torchvision = "^0.13.1"
opencv-python = "^4.6.0"
matplotlib = "^3.5.3"
tqdm = "^4.64.1"
pydantic = "^1.10.2"
pytest = "^7.1.3"
mypy = "^0.982"
diffusers = "^0.6.0"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
